changed post to

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div style="margin-left: auto; margin-right: auto; width: 800px;">
     	<h1>PIM POC</h1>
-	    <p>Post JSON to /calculatepim as {'json': {'pim": ... }}</p>
+	    <p>Post JSON to http://quiet-fortress-1492.herokuapp.com/pim as {'systolic_bp": ... }</p>
 	    <textarea id="tbxJson" style="width: 500px; height: 200px;"></textarea>
 	    <p><a href="javascript:CalculatePim2();">Calculate Pim2</a> <a href="javascript:SampleData();">Sample Data</a></p>
 	    <div id="pnlSuccess">
